Disable select avatar button if already wearing it

--- a/html/src/mixins/tabs/favorites.pug
+++ b/html/src/mixins/tabs/favorites.pug
@@ -183,7 +183,7 @@ mixin favoritesTab()
                                         el-tooltip(v-if="favorite.ref.releaseStatus === 'private'" placement="left" :content="$t('view.favorite.private')")
                                             i.el-icon-warning(style="color:#e6a23c;margin-left:5px")
                                         el-tooltip(v-if="favorite.ref.releaseStatus !== 'private' && !favorite.deleted" placement="right" :content="$t('view.favorite.select_avatar_tooltip')" :disabled="hideTooltips")
-                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" size="mini" icon="el-icon-check" circle style="margin-left:5px")
+                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" :disabled="API.currentUser.currentAvatar === favorite.id" size="mini" icon="el-icon-check" circle style="margin-left:5px")
                                         el-tooltip(placement="left" :content="$t('view.favorite.move_tooltip')" :disabled="hideTooltips")
                                             el-dropdown(trigger="click" @click.native.stop size="mini" style="margin-left:5px")
                                                 el-button(type="default" icon="el-icon-back" size="mini" circle)
@@ -212,7 +212,7 @@ mixin favoritesTab()
                                         span.name(v-text="favorite.name")
                                         span.extra(v-text="favorite.authorName")
                                     el-tooltip(placement="right" :content="$t('view.favorite.select_avatar_tooltip')" :disabled="hideTooltips")
-                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" size="mini" icon="el-icon-check" circle style="margin-left:5px")
+                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" :disabled="API.currentUser.currentAvatar === favorite.id" size="mini" icon="el-icon-check" circle style="margin-left:5px")
                                     template(v-if="API.cachedFavoritesByObjectId.has(favorite.id)")
                                         el-tooltip(placement="left" content="Unfavorite" :disabled="hideTooltips")
                                             el-button(@click.stop="deleteFavorite(favorite.id)" type="default" icon="el-icon-star-on" size="mini" circle)
@@ -239,7 +239,7 @@ mixin favoritesTab()
                                             span.name(v-text="favorite.name")
                                             span.extra(v-text="favorite.authorName")
                                         el-tooltip(placement="right" :content="$t('view.favorite.select_avatar_tooltip')" :disabled="hideTooltips")
-                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" size="mini" icon="el-icon-check" circle style="margin-left:5px")
+                                            el-button(@click.stop="selectAvatarWithConfirmation(favorite.id)" :disabled="API.currentUser.currentAvatar === favorite.id" size="mini" icon="el-icon-check" circle style="margin-left:5px")
                                         el-tooltip(placement="right" :content="$t('view.favorite.unfavorite_tooltip')" :disabled="hideTooltips")
                                             el-button(@click.stop="removeLocalAvatarFavorite(favorite.id, group)" size="mini" icon="el-icon-delete" circle style="margin-left:5px")
                                     template(v-else)
