feat: Additional Favorite Avatar Export Data #984

--- a/html/src/mixins/dialogs/favoritesDialog.pug
+++ b/html/src/mixins/dialogs/favoritesDialog.pug
@@ -106,6 +106,9 @@ mixin favoritesDialog()
 
     //- dialog: export avatar list
     el-dialog.x-dialog(:before-close="beforeDialogClose" @mousedown.native="dialogMouseDown" @mouseup.native="dialogMouseUp" ref="avatarExportDialogRef" :visible.sync="avatarExportDialogVisible" :title="$t('dialog.avatar_export.header')" width="650px")
+        el-checkbox-group(v-model="exportSelectedOptions" @change="updateAvatarExportDialog()" style="margin-bottom:10px")
+            template(v-for="option in exportSelectOptions" :key="option.value")
+                el-checkbox(:label="option.label")
         el-dropdown(@click.native.stop trigger="click" size="small")
             el-button(size="mini")
                 span(v-if="avatarExportFavoriteGroup") {{ avatarExportFavoriteGroup.displayName }} ({{ avatarExportFavoriteGroup.count }}/{{ avatarExportFavoriteGroup.capacity }}) #[i.el-icon-arrow-down.el-icon--right]
