--- a/html/src/app.scss
+++ b/html/src/app.scss
@@ -749,7 +749,7 @@ i.x-status-icon.red {
 .toggle-list .toggle-name {
     display: inline-block;
     min-width: 190px;
-    padding-right: 5px;
+    padding-right: 10px;
     text-align: right;
 }
 
@@ -913,4 +913,19 @@ i.x-status-icon.red {
 
 .el-pagination .el-input .el-input__icon {
     line-height: 22px;
+}
+
+// User dialog memo: tag line-height
+.el-dialog__body .el-tag--mini {
+    line-height: 17px;
+}
+
+// User dialog memo: input count background color
+.x-friend-item:hover .el-input__count {
+    background: #f0f0f0;
+}
+
+// Align the left page with the right friend bar
+.x-app > .x-container {
+    padding-top: 15px;
 }
