--- a/html/src/mixins/dialogs/feedFilters.pug
+++ b/html/src/mixins/dialogs/feedFilters.pug
@@ -499,5 +499,5 @@ mixin feedFilters()
                         el-radio-button(label="Off") {{ $t('dialog.shared_feed_filters.off') }}
                         el-radio-button(label="On") {{ $t('dialog.shared_feed_filters.on') }}
         template(#footer)
-            el-button(type="small" @click="resetSharedFeedFilters") {{ $t('dialog.shared_feed_filters.reset') }}
-            el-button(size="small" @click="wristFeedFiltersDialog.visible = false") {{ $t('dialog.shared_feed_filters.close') }}
+            el-button(size="small" @click="resetSharedFeedFilters") {{ $t('dialog.shared_feed_filters.reset') }}
+            el-button(size="small" type="primary" @click="wristFeedFiltersDialog.visible = false") {{ $t('dialog.shared_feed_filters.close') }}
