--- a/html/src/mixins/tabs/feed.pug
+++ b/html/src/mixins/tabs/feed.pug
@@ -6,7 +6,7 @@ mixin feedTab()
                     div(style="flex:none;margin-right:10px")
                         el-tooltip(placement="bottom" :content="$t('view.feed.favorites_only_tooltip')" :disabled="hideTooltips")
                             el-switch(v-model="feedTable.vip" @change="feedTableLookup" active-color="#13ce66")
-                    el-select(v-model="feedTable.filter" @change="feedTableLookup" multiple clearable collapse-tags style="flex:1" :placeholder="$t('view.feed.filter_placeholder')")
+                    el-select(v-model="feedTable.filter" @change="feedTableLookup" multiple clearable style="flex:1" :placeholder="$t('view.feed.filter_placeholder')")
                         el-option(v-once v-for="type in ['GPS', 'Online', 'Offline', 'Status', 'Avatar', 'Bio']" :key="type" :label="type" :value="type")
                     el-input(v-model="feedTable.search" :placeholder="$t('view.feed.search_placeholder')" @keyup.native.13="feedTableLookup" @change="feedTableLookup" clearable style="flex:none;width:150px;margin:0 10px")
             el-table-column(type="expand" width="20")
@@ -16,7 +16,7 @@ mixin feedTab()
                             location(v-if="scope.row.previousLocation" :location="scope.row.previousLocation")
                             el-tag(type="info" effect="plain" size="mini" style="margin-left:5px") {{ timeToText(scope.row.time) }}
                             br
-                            span
+                            span(style="margin-right:5px")
                                 i.el-icon-right
                             location(v-if="scope.row.location" :location="scope.row.location" :hint="scope.row.worldName" :grouphint="scope.row.groupName")
                         template(v-else-if="scope.row.type === 'Offline'")
