fix(style): bg color issue when hovering over input count in other themes

--- a/html/src/theme.material3.scss
+++ b/html/src/theme.material3.scss
@@ -1121,6 +1121,15 @@ input[type='number'],
     border-radius: 25px;
 }
 
+.x-friend-item .el-input__count {
+    background-color: transparent;
+}
+
+// User dialog memo: input count background color
+.x-friend-item:hover .el-input__count {
+    background-color: transparent;
+}
+
 .x-friend-item .detail {
     margin: 0 -2px;
 }
