--- a/html/src/theme.dark.scss
+++ b/html/src/theme.dark.scss
@@ -44,8 +44,13 @@ button {
 .el-textarea .el-input__count,
 .el-input .el-input__count .el-input__count-inner {
     color: #fff;
-    background-color: #444;
+    background-color: #333;
     border: #333;
+}
+
+// User dialog memo: input count background color
+.x-friend-item:hover .el-input__count {
+    background: #3e3e3e;
 }
 
 .el-input-group__append,
