--- a/html/src/theme.material3.scss
+++ b/html/src/theme.material3.scss
@@ -1993,3 +1993,8 @@ i.x-user-status {
 .el-table_41_column_291 {
     text-align: center !important;
 }
+
+.el-collapse-item .el-tag--mini {
+    background-color: transparent;
+    border: transparent;
+}
