--- a/html/src/app.scss
+++ b/html/src/app.scss
@@ -407,7 +407,6 @@ img.friends-list-avatar {
     object-fit: cover;
 }
 
-.x-friend-item > .avatar.offline > img,
 .x-friend-item > .avatar.active > img {
     filter: grayscale(1);
 }
@@ -920,6 +919,11 @@ i.x-status-icon.red {
     line-height: 17px;
 }
 
+// feed table detail time tag line-height
+.el-table__expanded-cell .el-tag--mini {
+    line-height: 17px;
+}
+
 // User dialog memo: input count background color
 .x-friend-item:hover .el-input__count {
     background: #f0f0f0;
@@ -928,4 +932,8 @@ i.x-status-icon.red {
 // Align the left page with the right friend bar
 .x-app > .x-container {
     padding-top: 15px;
+}
+
+.el-collapse-item .el-tag--mini {
+    line-height: 17px;
 }
