--- a/html/src/theme.dark.scss
+++ b/html/src/theme.dark.scss
@@ -127,8 +127,9 @@ button {
     background-color: #333;
 }
 
-.el-tag--plain.el-tag--success {
+.el-collapse-item .el-tag--mini {
     background-color: #333;
+    border: transparent;
 }
 
 .el-button {
