--- a/html/src/mixins/tabs/feed.pug
+++ b/html/src/mixins/tabs/feed.pug
@@ -3,7 +3,7 @@ mixin feedTab()
         data-tables(v-bind="feedTable" v-loading="feedTable.loading")
             template(#tool)
                 div(style="margin:0 0 10px;display:flex;align-items:center")
-                    div(style="flex:none;margin-right:10px")
+                    div(style="flex:none;margin-right:10px;display:flex;align-items:center;")
                         el-tooltip(placement="bottom" :content="$t('view.feed.favorites_only_tooltip')" :disabled="hideTooltips")
                             el-switch(v-model="feedTable.vip" @change="feedTableLookup" active-color="#13ce66")
                     el-select(v-model="feedTable.filter" @change="feedTableLookup" multiple clearable style="flex:1;height:40px;" :placeholder="$t('view.feed.filter_placeholder')")
