--- a/html/src/mixins/tabs/friendsList.pug
+++ b/html/src/mixins/tabs/friendsList.pug
@@ -18,7 +18,7 @@ mixin friendsListTab()
                     el-tooltip(placement="top" :content="$t('view.friend_list.load_tooltip')" :disabled="hideTooltips")
                         el-button(@click="friendsListLoadUsers" size="mini" icon="el-icon-refresh-left" circle style="margin-left:5px")
             div(style="margin:10px 0 0 10px;display:flex;align-items:center")
-                div(style="flex:none;margin-right:10px")
+                div(style="flex:none;margin-right:10px;display:flex;align-items:center;")
                     el-tooltip(placement="bottom" :content="$t('view.friend_list.favorites_only_tooltip')" :disabled="hideTooltips")
                         el-switch(v-model="friendsListSearchFilterVIP" @change="friendsListSearchChange" active-color="#13ce66")
                 el-input(v-model="friendsListSearch" :placeholder="$t('view.friend_list.search_placeholder')" @change="friendsListSearchChange" clearable style="flex:1")
