--- a/html/src/mixins/tabs/gameLog.pug
+++ b/html/src/mixins/tabs/gameLog.pug
@@ -3,7 +3,7 @@ mixin gameLogTab()
         data-tables(v-bind="gameLogTable" v-loading="gameLogTable.loading")
             template(#tool)
                 div(style="margin:0 0 10px;display:flex;align-items:center")
-                    div(style="flex:none;margin-right:10px")
+                    div(style="flex:none;margin-right:10px;display:flex;align-items:center;")
                         el-tooltip(placement="bottom" :content="$t('view.feed.favorites_only_tooltip')" :disabled="hideTooltips")
                             el-switch(v-model="gameLogTable.vip" @change="gameLogTableLookup" active-color="#13ce66")
                     el-select(v-model="gameLogTable.filter" @change="gameLogTableLookup" multiple clearable style="flex:1" :placeholder="$t('view.game_log.filter_placeholder')")
