--- a/html/src/mixins/tabs/profile.pug
+++ b/html/src/mixins/tabs/profile.pug
@@ -22,12 +22,12 @@ mixin profileTab()
                         span.name {{ $t('view.profile.profile.v_bucks') }}
                         span.extra {{ API.currentUser.$vbucks ?? $t('view.profile.profile.refresh') }}
             div(style="margin-top:10px")
-                el-button(size="small" type="danger" plain icon="el-icon-switch-button" @click="logout()" style="margin-right:5px;background:#fef0f0 !important;border-color:#fbc4c4 !important;") {{ $t('view.profile.profile.logout') }}
-                el-button(size="small" icon="el-icon-picture-outline" @click="showGalleryDialog()" style="margin-right:5px") {{ $t('view.profile.profile.manage_gallery_icon') }}
-                el-button(size="small" icon="el-icon-printer" @click="showExportFriendsListDialog()" style="margin-right:5px") {{ $t('view.profile.profile.export_friend_list') }}
-                el-button(size="small" icon="el-icon-user" @click="showExportAvatarsListDialog()" style="margin-right:5px") {{ $t('view.profile.profile.export_own_avatars') }}
-                el-button(size="small" icon="el-icon-chat-dot-round" @click="showDiscordNamesDialog()" style="margin-right:5px") {{ $t('view.profile.profile.discord_names') }}
-                el-button(size="small" icon="el-icon-document-copy" @click="showNoteExportDialog()" style="margin-right:5px") {{ $t('view.profile.profile.export_notes') }}
+                el-button(size="small" type="danger" plain icon="el-icon-switch-button" @click="logout()" style="margin-left:0;margin-right:5px;margin-top:10px;background:#fef0f0 !important;border-color:#fbc4c4 !important;") {{ $t('view.profile.profile.logout') }}
+                el-button(size="small" icon="el-icon-picture-outline" @click="showGalleryDialog()" style="margin-left:0;margin-right:5px;margin-top:10px") {{ $t('view.profile.profile.manage_gallery_icon') }}
+                el-button(size="small" icon="el-icon-printer" @click="showExportFriendsListDialog()" style="margin-left:0;margin-right:5px;margin-top:10px") {{ $t('view.profile.profile.export_friend_list') }}
+                el-button(size="small" icon="el-icon-user" @click="showExportAvatarsListDialog()" style="margin-left:0;margin-right:5px;margin-top:10px") {{ $t('view.profile.profile.export_own_avatars') }}
+                el-button(size="small" icon="el-icon-chat-dot-round" @click="showDiscordNamesDialog()" style="margin-left:0;margin-right:5px;margin-top:10px") {{ $t('view.profile.profile.discord_names') }}
+                el-button(size="small" icon="el-icon-document-copy" @click="showNoteExportDialog()" style="margin-left:0;margin-right:5px;margin-top:10px") {{ $t('view.profile.profile.export_notes') }}
         div.options-container
             span.header {{ $t('view.profile.game_info.header') }}
             .x-friend-list(style="margin-top:10px")
