--- a/html/src/mixins/tabs/settings.pug
+++ b/html/src/mixins/tabs/settings.pug
@@ -201,7 +201,7 @@ mixin settingsTab()
                         el-input-number(size="small" v-model="zoomLevel" @change="setZoomLevel" :precision="0" style="width:128px")
                     +simpleSwitch('view.settings.appearance.appearance.vrcplus_profile_icons', "displayVRCPlusIconsAsAvatar", "saveOpenVROption")
                     +simpleSwitch('view.settings.appearance.appearance.nicknames', "hideNicknames", "saveOpenVROption")
-                    +simpleSwitch('view.settings.appearance.appearance.tooltips', "hideTooltips", "saveOpenVROption")                    
+                    +simpleSwitch('view.settings.appearance.appearance.tooltips', "showTooltips", "saveOpenVROption")
                     div.options-container-item
                         span.name {{ $t('view.settings.appearance.appearance.sort_favorite_by') }}
                         el-radio-group(v-model="sortFavorites" @change="saveSortFavoritesOption")
