refactor: separate SimpleSwitch component using Vue SFC

--- a/html/src/theme.material3.scss
+++ b/html/src/theme.material3.scss
@@ -2002,3 +2002,6 @@ i.x-user-status {
     background-color: transparent;
     border: transparent;
 }
+.simple-switch {
+    justify-content: space-between;
+}
