chore: add locations for table filters

--- a/html/src/mixins/tabs/feed.pug
+++ b/html/src/mixins/tabs/feed.pug
@@ -7,7 +7,7 @@ mixin feedTab()
                         el-tooltip(placement="bottom" :content="$t('view.feed.favorites_only_tooltip')" :disabled="hideTooltips")
                             el-switch(v-model="feedTable.vip" @change="feedTableLookup" active-color="#13ce66")
                     el-select(v-model="feedTable.filter" @change="feedTableLookup" multiple clearable style="flex:1;height:40px;" :placeholder="$t('view.feed.filter_placeholder')")
-                        el-option(v-once v-for="type in ['GPS', 'Online', 'Offline', 'Status', 'Avatar', 'Bio']" :key="type" :label="type" :value="type")
+                        el-option(v-once v-for="type in ['GPS', 'Online', 'Offline', 'Status', 'Avatar', 'Bio']" :key="type" :label="$t('view.feed.filters.' + type)" :value="type")
                     el-input(v-model="feedTable.search" :placeholder="$t('view.feed.search_placeholder')" @keyup.native.13="feedTableLookup" @change="feedTableLookup" clearable style="flex:none;width:150px;margin:0 10px")
             el-table-column(type="expand" width="20")
                 template(v-once #default="scope")
@@ -76,6 +76,8 @@ mixin feedTab()
                             span {{ scope.row.created_at | formatDate('long') }}
                         span {{ scope.row.created_at | formatDate('short') }}
             el-table-column(:label="$t('table.feed.type')" prop="type" width="70")
+                template(v-once #default="scope")
+                    span.x-link(v-text="$t('view.feed.filters.' + scope.row.type)")
             el-table-column(:label="$t('table.feed.user')" prop="displayName" width="180")
                 template(v-once #default="scope")
                     span.x-link(v-text="scope.row.displayName" @click="showUserDialog(scope.row.userId)" style="padding-right:10px")
