--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -341,7 +341,7 @@ mixin settingsTab()
                     div.options-container-item
                         span.name {{ $t('view.settings.notifications.notifications.desktop_notifications.when_to_display') }}
                         br
-                        el-radio-group(v-model="overlayToast" @change="saveOpenVROption" size="mini" :disabled="(!overlayNotifications || !openVR) && !xsNotifications && !ovrtHudNotifications && !ovrtWristNotifications" style="margin-top:5px")
+                        el-radio-group(v-model="overlayToast" @change="saveOpenVROption" size="mini" :disabled="(!overlayNotifications || !openVR) && !xsNotifications && !wlxNotifications && !ovrtHudNotifications && !ovrtWristNotifications" style="margin-top:5px")
                             el-radio-button(label="Never") {{ $t('view.settings.notifications.notifications.conditions.never') }}
                             el-radio-button(label="Game Running") {{ $t('view.settings.notifications.notifications.conditions.inside_vrchat') }}
                             el-radio-button(label="Game Closed") {{ $t('view.settings.notifications.notifications.conditions.outside_vrchat') }}
@@ -353,9 +353,14 @@ mixin settingsTab()
                         el-switch(v-model="overlayNotifications" @change="saveOpenVROption" :disabled="!openVR")
                     div.options-container-item
                         el-button(size="small" icon="el-icon-rank" @click="showNotificationPositionDialog" :disabled="!overlayNotifications || !openVR") {{ $t('view.settings.notifications.notifications.steamvr_notifications.notification_position') }}
-                    div.options-container-item
-                        span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.xsoverlay_notifications') }}
-                        el-switch(v-model="xsNotifications" @change="saveOpenVROption")
+                    template(v-if="!LINUX")
+                        div.options-container-item
+                            span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.xsoverlay_notifications') }}
+                            el-switch(v-model="xsNotifications" @change="saveOpenVROption")
+                    template(v-else)
+                        div.options-container-item
+                            span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.wlxoverlay_notifications') }}
+                            el-switch(v-model="wlxNotifications" @change="saveOpenVROption")
                     div.options-container-item
                         span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.ovrtoolkit_hud_notifications') }}
                         el-switch(v-model="ovrtHudNotifications" @change="saveOpenVROption")
@@ -366,7 +371,7 @@ mixin settingsTab()
                         span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.user_images') }}
                         el-switch(v-model="imageNotifications" @change="saveOpenVROption")
                     div.options-container-item
-                        el-button(size="small" icon="el-icon-time" @click="promptNotificationTimeout" :disabled="(!overlayNotifications || !openVR) && !xsNotifications") {{ $t('view.settings.notifications.notifications.steamvr_notifications.notification_timeout') }}
+                        el-button(size="small" icon="el-icon-time" @click="promptNotificationTimeout" :disabled="(!overlayNotifications || !openVR) && !xsNotifications && !wlxNotifications") {{ $t('view.settings.notifications.notifications.steamvr_notifications.notification_timeout') }}
                 //- Notifications | Notifications | Desktop Notifications
                 div.options-container
                     span.sub-header {{ $t('view.settings.notifications.notifications.desktop_notifications.header') }}
@@ -570,13 +575,14 @@ mixin settingsTab()
                     div.options-container-item
                         el-button(size="small" icon="el-icon-user-solid" @click="showAvatarProviderDialog") {{ $t('view.settings.advanced.advanced.remote_database.avatar_database_provider') }}
                 //- Advanced | Automatic App Launcher
-                +simpleSettingsCategory("view.settings.advanced.advanced.app_launcher.header")
-                    br
-                    el-button(size="small" icon="el-icon-folder" @click="openShortcutFolder()" style="margin-top:5px") {{ $t('view.settings.advanced.advanced.app_launcher.folder') }}
-                        el-tooltip(placement="top" style="margin-left:5px" :content="$t('view.settings.advanced.advanced.app_launcher.folder_tooltip')")
-                            i.el-icon-info
-                    +simpleSwitch("view.settings.advanced.advanced.app_launcher.enable", "enableAppLauncher", "updateAppLauncherSettings")
-                    +simpleSwitch("view.settings.advanced.advanced.app_launcher.auto_close", "enableAppLauncherAutoClose", "updateAppLauncherSettings")
+                template(v-if="!LINUX")
+                    +simpleSettingsCategory("view.settings.advanced.advanced.app_launcher.header")
+                        br
+                        el-button(size="small" icon="el-icon-folder" @click="openShortcutFolder()" style="margin-top:5px") {{ $t('view.settings.advanced.advanced.app_launcher.folder') }}
+                            el-tooltip(placement="top" style="margin-left:5px" :content="$t('view.settings.advanced.advanced.app_launcher.folder_tooltip')")
+                                i.el-icon-info
+                        +simpleSwitch("view.settings.advanced.advanced.app_launcher.enable", "enableAppLauncher", "updateAppLauncherSettings")
+                        +simpleSwitch("view.settings.advanced.advanced.app_launcher.auto_close", "enableAppLauncherAutoClose", "updateAppLauncherSettings")
                 //- Advanced | Screenshot Helper
                 div.options-container
                     span.header {{ $t('view.settings.advanced.advanced.screenshot_helper.header') }}
