--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -353,7 +353,7 @@ mixin settingsTab()
                         el-switch(v-model="overlayNotifications" @change="saveOpenVROption" :disabled="!openVR")
                     div.options-container-item
                         el-button(size="small" icon="el-icon-rank" @click="showNotificationPositionDialog" :disabled="!overlayNotifications || !openVR") {{ $t('view.settings.notifications.notifications.steamvr_notifications.notification_position') }}
-                    template(v-if="!LINUX")
+                    template(v-if="!isLinux")
                         div.options-container-item
                             span.name {{ $t('view.settings.notifications.notifications.steamvr_notifications.xsoverlay_notifications') }}
                             el-switch(v-model="xsNotifications" @change="saveOpenVROption")
@@ -575,7 +575,7 @@ mixin settingsTab()
                     div.options-container-item
                         el-button(size="small" icon="el-icon-user-solid" @click="showAvatarProviderDialog") {{ $t('view.settings.advanced.advanced.remote_database.avatar_database_provider') }}
                 //- Advanced | Automatic App Launcher
-                template(v-if="!LINUX")
+                template(v-if="!isLinux")
                     +simpleSettingsCategory("view.settings.advanced.advanced.app_launcher.header")
                         br
                         el-button(size="small" icon="el-icon-folder" @click="openShortcutFolder()" style="margin-top:5px") {{ $t('view.settings.advanced.advanced.app_launcher.folder') }}
