--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -51,6 +51,7 @@ mixin settingsTab()
                             .detail
                                 span.name {{ $t("view.settings.general.general.latest_app_version") }}
                                 span.extra(v-if="latestAppVersion" v-text="latestAppVersion")
+                                span.extra(v-else-if="isLinux") -
                                 span.extra(v-else) {{ $t("view.settings.general.general.latest_app_version_refresh") }}
                         //- General | General | Repository URL
                         .x-friend-item(@click="openExternalLink('https://github.com/vrcx-team/VRCX')")
@@ -63,22 +64,24 @@ mixin settingsTab()
                                 span.name {{ $t("view.settings.general.general.support") }}
                                 span.extra https://vrcx.app/discord
                 //- General | VRCX Updater
-                +simpleSettingsCategory("view.settings.general.vrcx_updater.header")
-                    div.options-container-item
-                        el-button(size="small" icon="el-icon-document" @click="showChangeLogDialog()") {{ $t("view.settings.general.vrcx_updater.change_log") }}
-                        el-button(size="small" icon="el-icon-upload" @click="showVRCXUpdateDialog()") {{ $t("view.settings.general.vrcx_updater.change_build") }}
-                    +simpleRadioGroup("view.settings.general.vrcx_updater.update_action", "autoUpdateVRCX", [
-                        { label: "Off", translationKey: "view.settings.general.vrcx_updater.auto_update_off" },
-                        { label: "Notify", translationKey: "view.settings.general.vrcx_updater.auto_update_notify" },
-                        { label: "Auto Download", translationKey: "view.settings.general.vrcx_updater.auto_update_download" },
-                    ], "saveAutoUpdateVRCX")
+                template(v-if="!isLinux")
+                    +simpleSettingsCategory("view.settings.general.vrcx_updater.header")
+                        div.options-container-item
+                            el-button(size="small" icon="el-icon-document" @click="showChangeLogDialog()") {{ $t("view.settings.general.vrcx_updater.change_log") }}
+                            el-button(size="small" icon="el-icon-upload" @click="showVRCXUpdateDialog()") {{ $t("view.settings.general.vrcx_updater.change_build") }}
+                        +simpleRadioGroup("view.settings.general.vrcx_updater.update_action", "autoUpdateVRCX", [
+                            { label: "Off", translationKey: "view.settings.general.vrcx_updater.auto_update_off" },
+                            { label: "Notify", translationKey: "view.settings.general.vrcx_updater.auto_update_notify" },
+                            { label: "Auto Download", translationKey: "view.settings.general.vrcx_updater.auto_update_download" },
+                        ], "saveAutoUpdateVRCX")
                 //- General | Application
                 +simpleSettingsCategory("view.settings.general.application.header")
                     simple-switch(:label='$t("view.settings.general.application.startup")' :value='isStartAtWindowsStartup' @change='saveVRCXWindowOption("VRCX_StartAtWindowsStartup")')
                     simple-switch(:label='$t("view.settings.general.application.minimized")' :value='isStartAsMinimizedState' @change='saveVRCXWindowOption("VRCX_StartAsMinimizedState")')
                     simple-switch(:label='$t("view.settings.general.application.tray")' :value='isCloseToTray' @change='saveVRCXWindowOption("VRCX_CloseToTray")')
-                    simple-switch(:label='$t("view.settings.general.application.disable_gpu_acceleration")' :value='disableGpuAcceleration' @change='saveVRCXWindowOption("VRCX_DisableGpuAcceleration")' :tooltip='$t("view.settings.general.application.disable_gpu_acceleration_tooltip")')
-                    simple-switch(:label='$t("view.settings.general.application.disable_vr_overlay_gpu_acceleration")' :value='disableVrOverlayGpuAcceleration' @change='saveVRCXWindowOption("VRCX_DisableVrOverlayGpuAcceleration")' :tooltip='$t("view.settings.general.application.disable_gpu_acceleration_tooltip")')
+                    template(v-if="!isLinux")
+                        simple-switch(:label='$t("view.settings.general.application.disable_gpu_acceleration")' :value='disableGpuAcceleration' @change='saveVRCXWindowOption("VRCX_DisableGpuAcceleration")' :tooltip='$t("view.settings.general.application.disable_gpu_acceleration_tooltip")')
+                        simple-switch(:label='$t("view.settings.general.application.disable_vr_overlay_gpu_acceleration")' :value='disableVrOverlayGpuAcceleration' @change='saveVRCXWindowOption("VRCX_DisableVrOverlayGpuAcceleration")' :tooltip='$t("view.settings.general.application.disable_gpu_acceleration_tooltip")')
                     div.options-container-item
                         el-button(size="small" icon="el-icon-connection" @click="promptProxySettings()") {{ $t("view.settings.general.application.proxy") }}
                 //- General | Favorite
@@ -363,7 +366,7 @@ mixin settingsTab()
                         el-button(size="small" icon="el-icon-video-play" @click="testNotificationTTS" style="margin-left:10px") {{ $t('view.settings.notifications.notifications.text_to_speech.play') }}
 
             //- Wrist Overlay Tab
-            el-tab-pane(:label="$t('view.settings.category.wrist_overlay')")
+            el-tab-pane(:label="$t('view.settings.category.wrist_overlay')" v-if="!isLinux")
                 //- Wrist Overlay | SteamVR Wrist Overlay
                 div.options-container(style="margin-top:0")
                     span.header {{ $t('view.settings.wrist_overlay.steamvr_wrist_overlay.header') }}
@@ -445,14 +448,16 @@ mixin settingsTab()
                     //- Advanced | Relaunch VRChat After Crash
                     simple-switch(:label='$t("view.settings.advanced.advanced.relaunch_vrchat.description")' :value='relaunchVRChatAfterCrash' @change='saveOpenVROption("VRCX_relaunchVRChatAfterCrash")' :long-label='true')
                     //- Advanced | VRChat Quit Fix
-                    span.sub-header {{ $t('view.settings.advanced.advanced.vrchat_quit_fix.header') }}
-                    simple-switch(:label='$t("view.settings.advanced.advanced.vrchat_quit_fix.description")' :value='vrcQuitFix' @change='saveOpenVROption("VRCX_vrcQuitFix")' :long-label='true')
+                    template(v-if="!isLinux")
+                        span.sub-header {{ $t('view.settings.advanced.advanced.vrchat_quit_fix.header') }}
+                        simple-switch(:label='$t("view.settings.advanced.advanced.vrchat_quit_fix.description")' :value='vrcQuitFix' @change='saveOpenVROption("VRCX_vrcQuitFix")' :long-label='true')
                     //- Advanced | Auto Cache Management
                     span.sub-header {{ $t('view.settings.advanced.advanced.auto_cache_management.header') }}
                     simple-switch(:label='$t("view.settings.advanced.advanced.auto_cache_management.description")' :value='autoSweepVRChatCache' @change='saveOpenVROption("VRCX_autoSweepVRChatCache")' :long-label='true')
                     //- Advanced | Disable local world database
-                    span.sub-header {{ $t('view.settings.advanced.advanced.local_world_persistence.header') }}
-                    simple-switch(:label='$t("view.settings.advanced.advanced.local_world_persistence.description")' :value='!disableWorldDatabase' @change='saveVRCXWindowOption("VRCX_DisableWorldDatabase")' :long-label='true')
+                    template(v-if="!isLinux")
+                        span.sub-header {{ $t('view.settings.advanced.advanced.local_world_persistence.header') }}
+                        simple-switch(:label='$t("view.settings.advanced.advanced.local_world_persistence.description")' :value='!disableWorldDatabase' @change='saveVRCXWindowOption("VRCX_DisableWorldDatabase")' :long-label='true')
 
                 //- Advanced | User Generated Content
                 div.options-container
@@ -508,7 +513,7 @@ mixin settingsTab()
                     div.options-container-item
                         el-button(size="small" icon="el-icon-caret-right" @click="showYouTubeApiDialog") {{ $t('view.settings.advanced.advanced.youtube_api.youtube_api_key') }}
                 //- Advanced | Video Progress Pie
-                div.options-container
+                div.options-container(v-if="!isLinux")
                     span.header {{ $t('view.settings.advanced.advanced.video_progress_pie.header') }}
                     simple-switch(:label='$t("view.settings.advanced.advanced.video_progress_pie.enable")' :value='progressPie' @change='changeYouTubeApi("VRCX_progressPie")' :disabled="!openVR" :tooltip="$t('view.settings.advanced.advanced.video_progress_pie.enable_tooltip')" :long-label='true')
                     simple-switch(:label='$t("view.settings.advanced.advanced.video_progress_pie.dance_world_only")' :value='progressPieFilter' @change='changeYouTubeApi("VRCX_progressPieFilter")' :disabled="!openVR" :long-label='true')
